Fixed level design and bullet VFX

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,6 +16,7 @@ r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.AntiAliasing=1
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
+r.PostProcessing.PropagateAlpha=0
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Static
